# data-management-project

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PIPELINE.md  README.md  REPRODUCTION_OF_PROJECT.md  docker-compose.yml  mongo_schema_audit.json  mongo_schema_audit.py  pyproject.toml  scraper_logic_v11.md  skills-lock.json  tripadvisor_checkpoint.json  tripadvisor_list_restaurant.txt  tripadvisor_scraper_v11.py  useful_links.md
.claude/: settings.json
.claude/hooks/: block_dangerous_commands.sh  log_bash_commands.sh
.codex/: config.toml  hooks.json
.codex/hooks/: block_dangerous_commands.sh  log_bash_commands.sh
_specs/: google-places-seed-acquisition.md
data/: README.md
data/analysis_export/: restaurants_clean_google.csv  restaurants_clean_thefork.csv  restaurants_clean_tripadvisor.csv
data/processed/: entity_resolution_links_post_llm.jsonl  post_llm_export_manifest.json
data/quality/: anomalies.csv  entity_resolution_calibration_chains.csv  entity_resolution_calibration_normal.csv  field_coverage.csv  handlabel_for_post_int_assess.csv  source_quality_metrics.json  source_quality_scores.csv
diagrams/: likec4.config.json  model.c4  spec.c4  views.c4
docs/: PIPELINE.md  README.md  antibot-comparison.md  data-quality-assessment.md  dataset-schema.md  dev-guide.md  etl-design.md  post-integration-assessment.md  schema-correspondences.md  schema-matching.md  storage-design.md  tripadvisor-scraper-extract.md
docs/dump/: DATA_VISUALIZATION_PROJECT_IDEA.md  OPTIONAL_stagehand_scrapper_setup.md  clickhouse-docker-network-issue.md  other-setup-goals.md  uv-precommit-setup.md
docs/optional_plans/: OPTIONAL_google_maps_scrapper_ready.md
docs/pitch/: EXAM_REQUIREMENTS.md
docs/requirements/: PROF_PITCH.md
docs/the_fork_migration/: DATASET_CHANGES.md
notebooks/: q00_overview.ipynb  q01_consistency.ipynb  q02_disagreement.ipynb  q03_quality_link.ipynb  q04_sparse_data.ipynb  q05_platform_bias.ipynb  q06_popularity.ipynb  q07_location_completeness.ipynb  q08_cuisine.ipynb  q09_price.ipynb  q10_selection_effect.ipynb  q11_photos.ipynb  research_questions_analysis.ipynb
report/: README.md  build_report.ps1  main.tex
report/docs/: post-integration-assessment.md
report/final/: research_questions_analysis.html
report/overleaf/: abstract.tex  appendix.tex  architecture.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  conclusions.tex  cover.tex  introduction.tex  main.tex
report/post_integration/: body.tex  main.tex
report/pre_integration/: body.tex  build_report.ps1  main.tex
report/tables/: field_coverage.tex  google_places_detail.tex  google_places_field_coverage.tex  improvement_actions.tex  metric_definitions.tex  source_comparison.tex  source_quality_scores.tex  source_summary.tex  thefork_detail.tex  thefork_field_coverage.tex  tripadvisor_detail.tex  visual_anomaly_profile.tex  visual_coverage_heatmap.tex  visual_quality_scores.tex  visual_score_components.tex
scripts/: build_final_report.py  export_mongo_big_jsons.py  inspect_er_candidates.py  run_llm_matching_pipeline.ps1
services/: README.md
services/analysis/: README.md  __init__.py  config.py  constants.py  dump.py  export.py  geo.py  notebook.py
services/google_places_api_extract/: README.md  mode_list.py  storage.py
services/integration_assessment/: README.md  __init__.py  assessment.py  cli.py  config.py  er_metrics.py  geo_metrics.py  gold.py  link_metrics.py  mongo.py  reporting.py
services/mongo_load/: README.md  cli.py  config.py  loader.py  sources.py
services/quality_assessment/: README.md  __init__.py  __main__.py  cli.py  normalization.py  profiler.py  reporting.py
services/thefork_scraper_extract/: README.md  SCRAPER_SPEC.md  __init__.py  calibration.py  cdp_parallel.py  config.py  detail_scraper.py  graphql_detail_scraper.py  main.py  merge_outputs.py  models.py  proxy_utils.py  scraper.py  storage.py  validators.py
services/tripadvisor_scraper_extract/: README.md  dataset-schema.md  merge_results.py  scraper.py  scraper_logic_v11.md  tripadvisor-scraper-extract.md
specs/: README.md  clean-transforms-er-prep.md  data-storage-layer.md  entity-resolution.md  google-places-elt-transform.md  multi-browser-chromium-detection.md  multi-centre-neighbourhood-tiling.md  research-questions-analysis.md  storage-load-layer.md  template.md  thefork-elt-transform.md  tripadvisor-clean-parity.md  tripadvisor-elt-transform.md  tripadvisor-elt-transform.plan.md
src/google_places_api_extract/: cli.py  config.py  mode_detail.py
src/tripadvisor_scraper_extract/: __main__.py  scraper.py  scraper_logic_v11.md
tests/: README.md
tests/analysis/: test_research_queries.py
tests/google_places_api_extract/: conftest.py  test_config.py  test_mode_detail.py  test_mode_list.py  test_multi_centre.py  test_places_client.py  test_storage.py  test_tiling.py
tests/integration_assessment/: test_assessment.py  test_er_metrics.py  test_export_sample.py  test_geo_metrics.py  test_gold.py  test_link_metrics.py
tests/mongo_load/: test_cli.py  test_config_sources.py  test_integration.py  test_loader.py
tests/quality_assessment/: test_normalization.py  test_profiler.py
tests/stage1_seed/: conftest.py  test_mode_detail.py  test_mode_list.py  test_multi_centre.py  test_places_client.py  test_storage.py  test_tiling.py
tests/transform/: test_entity_resolution.py  test_entity_resolution_llm.py  test_er_prep.py  test_integrated_dataset.py  test_integrated_dataset_integration.py  test_llm_matching_pipeline.py
tests/tripadvisor_scraper_extract/: __init__.py  test_scraper.py
thefork_scraper/: .gitignore  README.md  SCRAPER_SPEC.md
thefork_scraper/output/: thefork_milan_restaurants_normalized.json  thefork_milan_restaurants_normalized_partial.json  thefork_milan_restaurants_normalized_partial.merge_report.json
thefork_scraper/src/: calibration.py  cdp_parallel.py  config.py  detail_scraper.py  graphql_detail_scraper.py  main.py  (+7 more)
tripadvisor-enrichment/: README.md  geocode.py
tripadvisor_scraper/: .gitignore  README.md  SCRAPER_SPEC.md
(+285 files in other folders)
