[project]
name = "data-management-project"
version = "0.1.0"
description = "Restaurant ratings consistency analysis across Google Maps, Tripadvisor, and TheFork (Milan)"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymongo>=4.8",
    "playwright>=1.60.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "mongomock>=4.1",
]

[project.scripts]
google-places-api-extract = "google_places_api_extract.cli:app"
pipeline-stage1 = "google_places_api_extract.cli:app"
tripadvisor-scraper-extract = "tripadvisor_scraper_extract.scraper:run_cli"
tripadvisor-merge-results = "tripadvisor_scraper_extract.merge_results:main"
thefork-scraper-extract = "thefork_scraper_extract.main:main"
thefork-merge-outputs = "thefork_scraper_extract.merge_outputs:main"
quality-assessment = "quality_assessment.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services/google_places_api_extract", "services/tripadvisor_scraper_extract", "services/thefork_scraper_extract", "services/quality_assessment"]

[tool.hatch.build.targets.wheel.force-include]
"services/tripadvisor_scraper_extract/scraper_logic_v11.md" = "tripadvisor_scraper_extract/scraper_logic_v11.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["google_places_api_extract", "tripadvisor_scraper_extract", "thefork_scraper_extract", "quality_assessment"]

[tool.pytest.ini_options]
pythonpath = ["services"]
testpaths = ["tests"]
