[project]
name = "data-management-project"
version = "0.1.0"
description = "Restaurant ratings consistency analysis across Google Maps, Tripadvisor, and TheFork (Milan)"
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymongo>=4.8",
    "playwright>=1.60.0",
    "tqdm>=4.66",
    "geopy>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "mongomock>=4.1",
]

[project.scripts]
google-places-api-extract = "extract.google_places_api.cli:app"
pipeline-stage1 = "extract.google_places_api.cli:app"
tripadvisor-scraper-extract = "extract.tripadvisor_scraper.scraper:run_cli"
tripadvisor-merge-results = "extract.tripadvisor_scraper.merge_results:main"
thefork-scraper-extract = "extract.thefork_scraper.main:main"
thefork-merge-outputs = "extract.thefork_scraper.merge_outputs:main"
dataman-load = "load.mongo.cli:app"
tripadvisor-clean = "transform.tripadvisor_clean.cli:app"
google-clean = "transform.google_clean.cli:app"
thefork-clean = "transform.thefork_clean.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"services/extract/google_places_api" = "extract/google_places_api"
"services/extract/tripadvisor_scraper" = "extract/tripadvisor_scraper"
"services/extract/thefork_scraper" = "extract/thefork_scraper"
"services/load/mongo" = "load/mongo"
"services/transform/tripadvisor_clean" = "transform/tripadvisor_clean"
"services/transform/google_clean" = "transform/google_clean"
"services/transform/thefork_clean" = "transform/thefork_clean"
"services/transform/common" = "transform/common"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["extract", "load", "transform"]

[tool.pytest.ini_options]
pythonpath = ["services"]
testpaths = ["tests"]
