[project]
name = "data-management-project"
version = "0.1.0"
description = "Restaurant ratings consistency analysis across Google Maps, Tripadvisor, and TheFork (Milan)"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymongo>=4.8",
    "playwright>=1.60.0",
    "rapidfuzz>=3.10",
    "tqdm>=4.66",
    "geopy>=2.4",
    "clickhouse-connect>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "mongomock>=4.1",
]
analysis = [
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "plotly>=5.22",
    "pandas>=2.2",
    "kaleido>=0.2",
]

[project.scripts]
google-places-api-extract = "extract.google_places_api.cli:app"
pipeline-stage1 = "extract.google_places_api.cli:app"
tripadvisor-scraper-extract = "extract.tripadvisor_scraper.scraper:run_cli"
tripadvisor-merge-results = "extract.tripadvisor_scraper.merge_results:main"
thefork-scraper-extract = "extract.thefork_scraper.main:main"
thefork-merge-outputs = "extract.thefork_scraper.merge_outputs:main"
dataman-load = "load.mongo.cli:app"
dataman-load-clickhouse = "load.clickhouse.cli:app"
tripadvisor-clean = "transform.tripadvisor_clean.cli:app"
google-clean = "transform.google_clean.cli:app"
thefork-clean = "transform.thefork_clean.cli:app"
dataman-entity-resolve = "transform.entity_resolution.cli:app"
dataman-er-calibrate = "transform.entity_resolution.calibrate:app"
dataman-unify = "transform.unified_dataset.cli:app"
dataman-er-llm = "transform.entity_resolution_llm.cli:app"
dataman-llm-pipeline = "transform.llm_matching_pipeline.cli:app"
quality-assessment = "quality_assessment.cli:app"
integration-assessment = "integration_assessment.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"services/extract/google_places_api" = "extract/google_places_api"
"services/extract/tripadvisor_scraper" = "extract/tripadvisor_scraper"
"services/extract/thefork_scraper" = "extract/thefork_scraper"
"services/load/mongo" = "load/mongo"
"services/load/clickhouse" = "load/clickhouse"
"services/transform/tripadvisor_clean" = "transform/tripadvisor_clean"
"services/transform/google_clean" = "transform/google_clean"
"services/transform/thefork_clean" = "transform/thefork_clean"
"services/transform/entity_resolution" = "transform/entity_resolution"
"services/transform/unified_dataset" = "transform/unified_dataset"
"services/transform/entity_resolution_llm" = "transform/entity_resolution_llm"
"services/transform/llm_matching_pipeline" = "transform/llm_matching_pipeline"
"services/transform/common" = "transform/common"
"services/quality_assessment" = "quality_assessment"
"services/integration_assessment" = "integration_assessment"
"services/analysis" = "analysis"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["extract", "load", "transform", "quality_assessment", "integration_assessment", "analysis"]

[tool.pytest.ini_options]
pythonpath = ["services"]
testpaths = ["tests"]
